<?xml version="1.0"?>
<package>
  <name>balance_bot_pkg_for_pidpkg</name>
  <version>1.1.1</version>
  <description>The balance_bot_pkg_for_pidpkg package</description>
  <maintainer email="ajburch92@gmail.com">Austin Burch</maintainer>
  <license>MIT</license>
  <author email="ajburch92@gmail.com">Austin Burch</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscppp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pid</build_depend>
  <run_depend>roscppp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>pid</run_depend>
  
  <export>
  </export>
</package>
